@@ -8,6 +8,7 @@ class Net::SSLeay {
   use Net::SSLeay::SSL_CTX;
   use Net::SSLeay::ERR;
   use Net::SSLeay::Error;
+  use Net::SSLeay::SSL_CIPHER;
   
   INIT {
     &init();
@@ -58,6 +59,8 @@ class Net::SSLeay {
   native method version : int ();
   
   native method session_reused : int ();
+  
+  native method get_cipher : string ();
   
   # This method is not documented in OpenSSL, but Perl's IO::Socket::SSL needs this method
   native method set_SSL_CTX : Net::SSLeay::SSL_CTX ($ctx : Net::SSLeay::SSL_CTX);
